--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  http: 0.13.4  
+  logger: 1.1.0
 
-  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
