--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  http: 0.13.4  
-  infinite_scroll_pagination: 3.1.0
-  logger: 1.1.0
-  provider: 6.0.2
-  shimmer: 2.0.0
-  url_launcher: 6.0.20
+  http: 1.2.1 
+  infinite_scroll_pagination: ^4.0.0
+  logger: 2.2.0
+  path_provider: ^2.1.3
+  provider: 6.1.2
+  share: ^2.0.4
+  shimmer: 3.0.0
+  sqflite: ^2.3.3
+  url_launcher: 6.2.6
 
 
 dev_dependencies:
@@ -28,5 +31,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/assets/images/
-
- 
